tm/tm.web/src/main/webapp/styles/structure.css
/* ... */
.requirement-MINOR {
	background-color: #96CA2D;
}

.requirement-MAJOR {
	background-color: #FFD500;
}

.requirement-CRITICAL {
	background-color: #FE421C;
}

.attachemnt-item {
	margin-top: 5px;
	margin-bottom: 5px;
}

.attachment-item input[type="button"] {
	margin-left: 2em;
}

/* ------------------------------------------ */
/* -------->>> Execution windows <<<--------- */
/* ------------------------------------------ */
body.execute-html-body { /*width:100%;*/

}

div#execute-header {
	position: absolute;
	overflow : hidden;
	width : 100%;
}


#new-test-case-label{
	color : red;
}

div#execute-header-left-div {
	float: left;
}

div#execute-header-center-div {
	text-align: center;
	width: 49.5%;
	display: inline-block;
}

span#execute-header-numbers-label {
	font-size: 2.0em;
	position: relative;
	top: 3px;
}

div#execute-header-right-div {
	float: right;
}

div#execute-body {
	width: inherit;
	/*min-width:595px;*/
	border-top: 1px solid gray;
	border-right: 1px solid gray;
	overflow-x: hidden;
	overflow-y: scroll;
	position: absolute;
	bottom: 0;
	top: 0.9cm;
	position:absolute;
}

.ui-resizable-helper {
	border: 2px dotted #5E287B;
}


.execute-fragment-body>div {
	margin-top: 10px;
	margin-bottom: 10px;
	width: auto;
	margin-right: 10px;
	margin-left: 10px;
}

div#execute-evaluation-rightside {
	text-align: right;
	vertical-align: middle;
}

div#execute-evaluation-rightside>label {
	font-weight: bold;
	font-size: 2.0em;
}

.execution-status-combo-class {
	width: 128px;
	height: 18px;
	text-align: right;
}

/* ------------------------------------------ */
/* ---------->>> User account <-------------- */
/* ------------------------------------------ */
.user-account-unmodifiable-field {
	color: gray;
}

div#user-account-password-panel {
	display: table;
	margin-left: auto;
	margin-right: auto;
}

div#user-account-password-panel>div {
	display: table-row;
}

div#user-account-password-panel>div>* {
	display: table-cell;
	margin: 0.15em 0.5em;
}

/* ------------------------------------------ */
/* -------------->>> MISC <<<---------------- */
/* ------------------------------------------ */
input[disabled]{
	opacity:0.5;
}

.ellipsis{
    margin: 0.5em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
	}

table#test-steps-table > tbody > tr > td > a {
    color: inherit;
    text-decoration: underline;
}


td.button-cell, th.button-cell, td.icon-cell, th.icon-cell {
	width: 2em;
}


.requirement-indirect-verification td,
.requirement-indirect-verification td>a,
.testcases-indirect-verification td,
.testcases-indirect-verification td>a,
.inherited-parameter-verification td,
.inherited-parameter-verification td>a,
.milestone-indirect-membership td,
.milestone-indirect-membership td>a{
	font-style: italic;
	color: gray;
}


div#project-description-table .projectInactive {
	margin:0;
}

div#project-description-table .projectActive {
	color: green;
}

div.information-panel p {
	margin: 0;
}

/* ------->>> association interface <<<---------------------*/
.association-button {
	margin-bottom: 15px;
	width: 40px;
	height: 20px;
}

.association-button span {
	left: 1em !important;
}

/* ------->>> /association interface <<<--------------------*/

/* ------->>> PAGE LAYOUT WITH UP NAVIGATION BAR<<<---------*/

/* ---------------------------------------------------------*/


#login-form-button-pane {
	text-align: center;
	padding: 0.3em 0em 0.5em 0em;
}


.horizontal-logo{
	background-image : url("../images/logo_squash30h.png"); /** sprite-ref: sprites-icons; */
	width :  113px;
	height : 30px;
	display : inline-block;
}

/* it was supposed to be a vertical align but that quick fix is just as fine.*/
.nav-up-layout .horizontal-logo {
	margin-top: 4px;
}

.nav-up-layout #nav-bar {
	position: absolute;
	min-width: 100%;
	height: 1cm;
	background-image: url("../images/fond_nav_rotate.gif");
	margin-bottom: 0.4cm;
}

.nav-up-layout #main-pane {
	position: absolute;
	min-width: 100%;
	top: 1.4cm;
}

.nav-up-layout #nav-up-version {
	font-size: 0.8em;
	color: white;
	margin-left: 20px;
	position: absolute;
	bottom: 0;
}

.nav-up-layout #footer {

}

/* ---------------------------------------------------------*/
/* ---------------->>> User Infos page <<<------------------*/
/* ---------------------------------------------------------*/
#user-infos-table {
	display: inline-block;
	width: 450px;
}

#user-infos-table td {
	vertical-align: top;
}

#user-infos-table td:first-child {
	width: 100px;
}


/* ---------------------------------------------------------*/
/* ------------------>>> Tree Popups <<<--------------------*/
/* ---------------------------------------------------------*/

.warning-cell, .display-table-cell.warning-cell{
	vertical-align: middle;
}

.generic-error-signal {
	background-image : url('../images/messagebox_error.png');  /** sprite-ref: sprites-icons; */
	background-repeat : no-repeat;
	width : 72px;
	height : 64px;
}

.generic-warning-signal {
	background-image : url('../images/messagebox_warning.png');  /** sprite-ref: sprites-icons; */
	background-repeat : no-repeat;
	width : 72px;
	height : 64px;
}


.generic-info-signal {
	background-image : url('../images/messagebox_info.png');  /** sprite-ref: sprites-icons; */
	background-repeat : no-repeat;
	width : 72px;
	height : 64px;
}

.generic-question-signal, .delete-node-dialog-warning {
	background-image : url('../images/messagebox_confirm.png');  /** sprite-ref: sprites-icons; */
	background-repeat : no-repeat;
	width : 72px;
	height : 64px;
}

#delete-node-dialog .delete-node-dialog-details{
	padding-left : 1.5em;
	padding-top : 0.2em;
	padding-bottom : 0.2em;
	padding-right : 0.2em;
	background-color : #EFEFEF;
}

#delete-node-dialog .delete-node-dialog-details p{
	font-weight : bold;
}

#delete-node-dialog .delete-node-dialog-details ul{
	text-align: justify;
	padding-right: 10px;
}
/* ... */

